[package]
name = "intro_quiz_rs"
version = "0.1.0"
authors = ["catupper"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.9.0"
serialport = "3.3.0"
csv = "*"
rand = "*"
glob = "*"
device_query = "0.2.3"
clap = "2.33.0"
id3 = "0.5.0"